I convert the page to RTL direction

--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
   </head>
   <body>
     <div class="intro">
-      <header><div class="logo">
-        <h2>IBRAND-EG</h2>
-        <p>Cosmetics</p>
-      </div>
-        <nav>
-          <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Prodcuts</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
+      <div class="container">
+        <header>
+          <div class="logo">
+            <h2>IBRAND-EG</h2>
+            <p>cosmetics</p>
+          </div>
+          <nav>
+            <ul class="nav-links">
+              <li><a href="#">الرئيسية</a></li>
+              <li><a href="#">تواصل معنا</a></li>
+            </ul>
+          </nav>
         </header>
+          <section class="intro-body">
+            <div class="bio">
+
+            </div>
+            <div class="pic"></div>
+          </section>
+        </div>
     </div>
     <script src="script.js"></script>
   </body>
